k8s_files/deploy_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: 3-tier-app
  labels:
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: 949638458026.dkr.ecr.us-east-2.amazonaws.com/3tier-frontend-registry:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
