k8s_files/svc_backend.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: 3-tier-app
spec:
  ports:
  - port: 3500
    protocol: TCP
  type: ClusterIP
  selector:
   tier: backend
