k8s_files/svc_frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 3-tier-app
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP
  selector:
   tier: frontend
