k8s_files/svc_mongo.yml
apiVersion: v1
kind: Service
metadata:
  namespace: 3-tier-app
  name: mongodb-svc
spec:
  selector:
    app: mongodb
  ports:
  - name: mongodb-svc
    protocol: TCP
    port: 27017
    targetPort: 27017
